--- a/front/package.json
+++ b/front/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@chakra-ui/form-control": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.3",
+    "@mui/icons-material": "^5.15.2",
+    "@mui/material": "^5.15.2",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
