--- a/api/Gemfile
+++ b/api/Gemfile
@@ -22,6 +22,11 @@ gem 'bcrypt', '~> 3.1.20'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.2', require: false
 
+gem "google-api-client"
+
+# 環境変数を管理するgem
+gem 'dotenv-rails'
+
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 gem 'rack-cors', '~> 2.0'
 
