--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "check:lint": "biome lint .",
+    "check:format": "biome format .",
+    "check": "biome check .",
+    "fix": "biome check --apply ."
   },
   "dependencies": {
     "@chakra-ui/form-control": "^2.2.0",
@@ -32,6 +35,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.6.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
