Procfile内でserver.pidを削除

--- a/api/Procfile
+++ b/api/Procfile
@@ -1,1 +1,1 @@
-web: rm -f tmp/pids/server.pid && bundle exec puma -C config/puma.rb
+web: rm -f /app/tmp/pids/server.pid && bundle exec puma -C config/puma.rb
