Dockerイメージが構築されていないので、対応

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,24 @@
+# name: Deploy to Heroku
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - uses: actions/checkout@v2
+
+#       - name: Login to Heroku
+#         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+#         with:
+#           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+#           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+#           heroku_email: "masya868686@gmail.com"
+#           dontuseforce: false
+#           usedocker: true
 name: Deploy to Heroku
 on:
   push:
@@ -5,17 +26,23 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
 
-      - name: Login to Heroku
-        uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
-          heroku_email: "masya868686@gmail.com"
-          dontuseforce: false
-          usedocker: true
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.HEROKU_APP_NAME }}:latest .
+
+      - name: Heroku login
+        run: heroku container:login
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+
+      - name: Push Docker image to Heroku
+        run: heroku container:push web -a ${{ secrets.HEROKU_APP_NAME }}
+
+      - name: Release the container
+        run: heroku container:release web -a ${{ secrets.HEROKU_APP_NAME }}
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
