--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.HEROKU_APP_NAME }}:latest .
+        run: docker build -t ${{ secrets.HEROKU_APP_NAME }}:latest -f api/Dockerfile .
 
       - name: Heroku login
         run: heroku container:login
