--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,8 +5,11 @@ ENV LANG=C.UTF-8 \
 
 WORKDIR /app
 RUN apt-get update -qq && apt-get install -y nodejs default-mysql-client
-COPY Gemfile /app/Gemfile
-COPY Gemfile.lock /app/Gemfile.lock
+# COPY Gemfile /app/Gemfile
+# COPY Gemfile.lock /app/Gemfile.lock
+COPY api/Gemfile /app/Gemfile
+COPY api/Gemfile.lock /app/Gemfile.lock
+
 RUN bundle install
 
 # Start the main process.
